syntax = "proto3";
package pkg.mq;

import "pkg/mq/protocol.proto";


option go_package = "pkg/mq";
option java_multiple_files = true;
option java_outer_classname = "PkgMqMessageHeader";
option java_package = "pkg.mq.message_header";

// MessageHeader mq消息头
message MessageHeader {
  // tag message tag
  string tag = 1;
  // unique_id 全局唯一id，用于防止重复消费，保证幂等性
  string unique_id = 2;
  // body_protocol 消息体body序列化协议
  pkg.mq.Protocol body_protocol = 3;
}